# dalamud

./: .editorconfig  .gitignore  Cargo.toml  Dalamud.sln  Directory.Build.props  README.md
.github/workflows/: build.yml
lib/dotnet/: nethost.lib
src/Dalamud/: Dalamud.cs  Dalamud.csproj  DalamudConfig.cs  DalamudCore.cs  EntryPoint.cs
src/Dalamud.Bootstrap/: Bootstrapper.cs  BootstrapperContext.cs  CommandLineWriter.cs  Dalamud.Bootstrap.csproj  EnvironmentBlock.cs  EnvironmentBlockWriter.cs  Process.Builder.cs  Process.Child.cs
src/Dalamud.Bootstrap/FFI/: Structures.cs
src/Dalamud.Crypto/: Blowfish.Constants.cs  Blowfish.State.cs  Blowfish.cs  BlowfishLE.cs
src/Dalamud.SamplePlugin/: Dalamud.SamplePlugin.csproj  SamplePlugin.cs
src/Dalamud.SqexArg/: Dalamud.SqexArg.csproj  Key.cs  SqexArgumentBuilder.cs  SqexArgumentWriter.cs
src/Dalamud.Testing/: BlowfishTests.cs  Dalamud.Testing.csproj  IOCContainerTests.cs  PluginManifestTests.cs
src/Dalamud/Extensions/: ObjectExtensions.cs
src/Dalamud/Game/: TestInterface.cs
src/Dalamud/IOC/: Container.cs  DependencyVersion.cs  DependencyVersionAttribute.cs  RequiredVersion.cs  RequiredVersionAttribute.cs
src/Dalamud/Plugins/: CallGate.cs  Manifest.cs  Plugin.cs  PluginBase.cs  PluginEntryPointAttribute.cs  PluginLoadTime.cs
src/dalamud_boot/: Cargo.toml
src/dalamud_boot/src/: boot.rs  lib.rs
src/dalamud_boot/src/dotnet/: error.rs  hostfxr.rs  mod.rs
src/hostfxr-sys/: Cargo.toml
src/hostfxr-sys/src/: binding.rs  lib.rs
src/nethost-sys/: Cargo.toml  build.rs
src/nethost-sys/src/: binding.rs
(+4 files in other folders)
